added support for user formatted time fields! + fixed a NPE

--- a/src/gui/Screen4.form
+++ b/src/gui/Screen4.form
@@ -1,6 +1,13 @@
 <?xml version="1.0" encoding="UTF-8" ?>
 
 <Form version="1.3" maxVersion="1.8" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
+  <NonVisualComponents>
+    <Component class="javax.swing.JButton" name="jButton1">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="jButton1"/>
+      </Properties>
+    </Component>
+  </NonVisualComponents>
   <Properties>
     <Property name="defaultCloseOperation" type="int" value="3"/>
   </Properties>
@@ -50,7 +57,8 @@
                   <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="jLabel1" alignment="0" min="-2" max="-2" attributes="0"/>
                       <Component id="jLabel2" alignment="0" min="-2" max="-2" attributes="0"/>
-                      <Component id="jTextField1" alignment="0" min="-2" pref="194" max="-2" attributes="0"/>
+                      <Component id="userIndicatedTimeFormatField" alignment="0" min="-2" pref="194" max="-2" attributes="0"/>
+                      <Component id="OKButton" alignment="0" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
               </Group>
@@ -64,8 +72,10 @@
                   <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                   <Component id="jLabel2" min="-2" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
-                  <Component id="jTextField1" min="-2" max="-2" attributes="0"/>
-                  <EmptySpace pref="238" max="32767" attributes="0"/>
+                  <Component id="userIndicatedTimeFormatField" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace pref="186" max="32767" attributes="0"/>
+                  <Component id="OKButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="27" max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -81,15 +91,23 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Indicate how the data and time is formatted in the relevant field:&lt;br&gt;-use the symbols yyyy,mm and dd to indicate years, months and days.&lt;br&gt;-use hh,ii and ss to indicate hours, minutes and seconds.&lt;br&gt;&lt;br&gt;Example:&lt;br&gt;For a date appearing as 01/12/1987;15:12:58, write:&lt;br&gt;dd#mm#yyyy#hh#ii#ss"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Indicate how the data and time is formatted in the relevant field:&lt;br&gt;-use the symbols yyyy,mm and dd to indicate years, months and days.&lt;br&gt;-use hh,ii and ss to indicate hours, minutes and seconds.&lt;br&gt;&lt;br&gt;Example:&lt;br&gt;For a date appearing as 31/12/1987;15:12:58, write:&lt;br&gt;dd#mm#yyyy#hh#ii#ss"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="jTextField1">
+        <Component class="javax.swing.JTextField" name="userIndicatedTimeFormatField">
           <Properties>
-            <Property name="text" type="java.lang.String" value="dd#mm#yyyy#"/>
+            <Property name="text" type="java.lang.String" value="mm#dd#yyyy#hh#ii"/>
           </Properties>
           <Events>
-            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jTextField1ActionPerformed"/>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userIndicatedTimeFormatFieldActionPerformed"/>
+          </Events>
+        </Component>
+        <Component class="javax.swing.JButton" name="OKButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="OK"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="OKButtonActionPerformed"/>
           </Events>
         </Component>
       </SubComponents>
