added the user selection of time format

--- a/src/gui/Screen1.form
+++ b/src/gui/Screen1.form
@@ -65,6 +65,10 @@
                               <Component id="CreateDynamicGexf" pref="149" max="32767" attributes="0"/>
                           </Group>
                       </Group>
+                      <Group type="102" alignment="0" attributes="0">
+                          <EmptySpace min="-2" pref="145" max="-2" attributes="0"/>
+                          <Component id="underTheHoodButton" min="-2" max="-2" attributes="0"/>
+                      </Group>
                   </Group>
                   <EmptySpace pref="114" max="32767" attributes="0"/>
               </Group>
@@ -87,7 +91,9 @@
                   <Component id="selectFileButton" min="-2" pref="53" max="-2" attributes="0"/>
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Component id="CreateDynamicGexf" min="-2" pref="40" max="-2" attributes="0"/>
-                  <EmptySpace min="-2" pref="211" max="-2" attributes="0"/>
+                  <EmptySpace min="-2" pref="173" max="-2" attributes="0"/>
+                  <Component id="underTheHoodButton" min="-2" max="-2" attributes="0"/>
+                  <EmptySpace max="-2" attributes="0"/>
               </Group>
           </Group>
         </DimensionLayout>
@@ -132,6 +138,14 @@
             </Property>
             <Property name="text" type="java.lang.String" value="Eonydis"/>
           </Properties>
+        </Component>
+        <Component class="javax.swing.JButton" name="underTheHoodButton">
+          <Properties>
+            <Property name="text" type="java.lang.String" value="under the hood"/>
+          </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="underTheHoodButtonActionPerformed"/>
+          </Events>
         </Component>
       </SubComponents>
     </Container>
