--- a/src/gui/Screen4.form
+++ b/src/gui/Screen4.form
@@ -99,7 +99,7 @@
         </Component>
         <Component class="javax.swing.JLabel" name="jLabel2">
           <Properties>
-            <Property name="text" type="java.lang.String" value="&lt;html&gt;Indicate the formar of your time field:&lt;br&gt;-use the symbols yyyy,mm and dd to indicate years, months and days.&lt;br&gt;-use hh,ii and ss to indicate hours, minutes and seconds.&lt;br&gt;&lt;br&gt;Example:&lt;br&gt;For a date appearing as 31/12/1987;15:12:58, write:&lt;br&gt;dd#mm#yyyy#hh#ii#ss"/>
+            <Property name="text" type="java.lang.String" value="&lt;html&gt;Indicate the format of your time field:&lt;br&gt;-use the symbols yyyy,mm and dd to indicate years, months and days.&lt;br&gt;-use hh,ii and ss to indicate hours, minutes and seconds.&lt;br&gt;&lt;br&gt;Example:&lt;br&gt;For a date appearing as 31/12/1987;15:12:58, write:&lt;br&gt;dd#mm#yyyy#hh#ii#ss"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JTextField" name="userIndicatedTimeFormatField">
