--- a/src/gui/Screen4.form
+++ b/src/gui/Screen4.form
@@ -104,7 +104,7 @@
         </Component>
         <Component class="javax.swing.JTextField" name="userIndicatedTimeFormatField">
           <Properties>
-            <Property name="text" type="java.lang.String" value="mm#dd#yyyy#hh#ii"/>
+            <Property name="text" type="java.lang.String" value="yyyy#mm#dd"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="userIndicatedTimeFormatFieldActionPerformed"/>
